--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 <div class="h-50"></div>
             </div>
             <div class="col-md-8" data-aos="fade-up">
-                <form class="contact-bg" id="contact-form" name="contact" action= "mailto:ashsuresh@ucdavis.edu" method="post" novalidate="novalidate">
+                <form action="mailto:ashsuresh@ucdavis.edu" method="post">
                     <input type="text" name="name" class="form-control" placeholder="Your Name" />
                     <input type="email" name="email" class="form-control" placeholder="Your E-mail" />
                     <input type="text" name="phone" class="form-control" placeholder="Phone Number" />
